k8s/sensor-simulator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sensor-simulator
spec:
  selector:
    app: sensor-simulator
  ports:
  - protocol: TCP
    port: 5002
    targetPort: 5002
  type: ClusterIP
